Remove scrollbar-bug

--- a/css/partials/_footer.sass
+++ b/css/partials/_footer.sass
@@ -13,6 +13,9 @@
     a:visited
         text-decoration: none
 
+.footer-grid
+    width: inherit
+
 .footer-content
     max-width: 1200px
     margin: auto
@@ -45,6 +48,8 @@
     background-color: darken( $gray, 5%)
     padding-top: 1px
     padding-bottom: 1px
+    width: 100%
+    margin-right: 0px
 
 .copyright-left
     float: left
